2009-12-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/{fits.c,meta.c,locale.c}: Fix benign warnings noticed
	under Cygwin 1.7.

	* magick/{constitute.c,resource.c,utility.c}: Fix benign warnings
	noticed under Cygwin 1.7.

2009-12-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/module.c (DestroyModuleInfo): If the Jasper library is
	used, then we can't invoke lt_dlexit() because this unloads the
	Jasper library and Jasper sometimes registers an atexit() cleanup
	handler.  Unfortunately, this may annoy memory leak checkers.

	* coders/jp2.c: Defer Jasper initialization to point of use.

2009-12-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* wand/magick_wand.c (MagickCdlImage): New method to apply the ASC
	CDL to an image.
	(MagickHaldClutImage): New method to apply a Hald CLUT to an image.

2009-12-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/studio.h atof(), atoi(), and atol() are legacy functions
	which might not be thread safe, might not enforce reasonable
	limits, and should not be used for new code.  So we implement them
	via strtod() and strtol().

2009-12-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* wand/magick_wand.c (MagickGetImageBoundingBox): New method to
	return the crop bounding box required to remove any solid-color
	border from the image.
	(MagickGetImageFuzz/MagickSetImageFuzz): New methods to get and
	set the color comparison fuzz factor

	* wand/pixel_wand.c (ClonePixelWand): New method to deep-copy an
	existing pixel wand.
	(ClonePixelWands): New method to deep-copy an array of existing
	pixel wands.

	* wand/magick_wand.c (MagickSetResolution): New method to set the
	wand resolution.  This one also works before the image has been
	read (unlike MagickSetImageResolution()).
	(MagickSetResolutionUnits): New method to set the wand resolution
	units.  Use in conjunction with MagickSetResolution().  This one
	also works before the image has been read (unlike
	MagickSetImageUnits()).